# mcp-server-automation

./: .gitignore  CLAUDE.md  README.md  config-example.yaml  pyproject.toml  requirements.txt
config-examples/: build-only.yaml  command-override-example.yaml  custom-image-uri.yaml  local-build.yaml  private-subnets.yaml
mcp_server_automation/: __init__.py  build.py  cli.py  config.py  deploy.py  mcp_automate.py  mcp_config.py
mcp_server_automation/templates/: Dockerfile.j2  ecs-service.yaml
tests/: README.md  test_build_command_generation.py  test_config.py  test_dockerfile_generation.py  test_mcp_config.py  test_package_detection.py
